Changed base template to fit our needs
Took the Law website and changed it to fit our projects added new icons, pages, changed overall home page, and created   pages for client, banker, admin. plus More

--- a/Bank Site/html/contact.html
+++ b/Bank Site/html/contact.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="what-we.html">What we do</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">News</a>
                      </li>
                      <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -72,7 +72,9 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <h1 class="contact_taital">Free Consulation</h1>
+                  <div class="col-sm-12 text-center">
+                  <h1 class="contact_taital">Have A Question?</h1>
+                  <h2 class="get_taital">Contact Us</h2>
                </div>
             </div>
             <div class="contact_section_2">
