--- a/Bank Site/html/index.html
+++ b/Bank Site/html/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Atema</title>
+      <title>Dawgs Bank</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="what-we.html">What we do</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">News</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -57,8 +57,8 @@
                   <form class="form-inline my-2 my-lg-0">
                      <div class="login_bt">
                         <ul>
-                           <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
-                           <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                           <li><a href="login2.html"><span class="user_icon">
+                           <i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
                         </ul>
                      </div>
                   </form>
@@ -74,14 +74,14 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">We Provide Law Practice</h1>
-                                 <p class="banner_text">Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem</p>
+                                 <h1 class="banner_taital">Dawgs Bank</h1>
+                                 <p class="banner_text">We See Your Potential, We Invest in Your Future</p>
                                  <div class="readmore_btn active"><a href="#">Read More</a></div>
                                  <div class="started_bt"><a href="#">Contact Us</a></div>
                               </div>
                            </div>
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/banner-img.png"></div>
+                              <div class="banner_img"><img src="images/homepage.png"></div>
                            </div>
                         </div>
                      </div>
@@ -89,14 +89,14 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">We Provide Law Practice</h1>
-                                 <p class="banner_text">Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem</p>
+                                 <h1 class="banner_taital">Join The Family</h1>
+                                 <p class="banner_text">Don't miss out on our wide variety of online products and services</p>
                                  <div class="readmore_btn active"><a href="#">Read More</a></div>
-                                 <div class="started_bt"><a href="#">Contact Us</a></div>
+                                 <div class="started_bt"><a href="#">Register</a></div>
                               </div>
                            </div>
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/banner-img.png"></div>
+                              <div class="banner_img"><img src="images/banner-img2.png"></div>
                            </div>
                         </div>
                      </div>
@@ -104,14 +104,14 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">We Provide Law Practice</h1>
-                                 <p class="banner_text">Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem</p>
+                                 <h1 class="banner_taital">100% customer satisfaction</h1>
+                                 <p class="banner_text">At Dawgs Bank customer satisfaction is our number 1 priority we work tirelessly to meet and exceed our customer's expectations. </p>
                                  <div class="readmore_btn active"><a href="#">Read More</a></div>
                                  <div class="started_bt"><a href="#">Contact Us</a></div>
                               </div>
                            </div>
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/banner-img.png"></div>
+                              <div class="banner_img"><img src="images/banner-img3.png"></div>
                            </div>
                         </div>
                      </div>
@@ -138,8 +138,8 @@
                         <div class="right_arrow"><i class="fa fa-arrow-right"></i></div>
                      </div>
                      <div class="box_right">
-                        <p class="book_text">Book At</p>
-                        <h4 class="appoinment_text">Appoinment</h4>
+                        <p class="book_text">Credit Cards</p>
+                        <h4 class="appoinment_text">Quick and Easy</h4>
                      </div>
                   </div>
                </div>
@@ -149,8 +149,8 @@
                         <div class="right_arrow"><i class="fa fa-arrow-right"></i></div>
                      </div>
                      <div class="box_right">
-                        <p class="book_text active">Get Free</p>
-                        <h4 class="appoinment_text active"> Evalution</h4>
+                        <p class="book_text active">Loans</p>
+                        <h4 class="appoinment_text active">Personal/Vehicle </h4>
                      </div>
                   </div>
                </div>
@@ -160,7 +160,7 @@
                         <div class="right_arrow"><i class="fa fa-arrow-right"></i></div>
                      </div>
                      <div class="box_right">
-                        <p class="book_text">Pay Invoice</p>
+                        <p class="book_text">Pay invoices, bills, and More!</p>
                         <h4 class="appoinment_text">Online</h4>
                      </div>
                   </div>
