--- a/Bank Site/html/what-we.html
+++ b/Bank Site/html/what-we.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="what-we.html">What we do</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">News</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
