Home, Header Menu, points 1,2,3 and Pages for all services
Full transformed template to fit our needs, changed header menu, login and logout buttons, sign in and sign up pages with checks and pop ups, added client page with all available services with buttons for each page finished points 1,2,3 with pages and java script checks. created new icons and images and more can't remember ^^

--- a/Bank Site/html/contact.html
+++ b/Bank Site/html/contact.html
@@ -57,8 +57,8 @@
                   <form class="form-inline my-2 my-lg-0">
                      <div class="login_bt">
                         <ul>
-                           <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
-                           <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                           <li><a href="login2.html"><span class="user_icon">
+                              <i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
                         </ul>
                      </div>
                   </form>
@@ -73,7 +73,7 @@
             <div class="row">
                <div class="col-sm-12">
                   <div class="col-sm-12 text-center">
-                  <h1 class="contact_taital">Have A Question?</h1>
+                  <h1 class="contact_taital">Report an issue</h1>
                   <h2 class="get_taital">Contact Us</h2>
                </div>
             </div>
