--- a/Bank Site/html/login2.html
+++ b/Bank Site/html/login2.html
@@ -41,7 +41,7 @@
                      <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                      </li> 
                          <li class="nav-item">
@@ -129,7 +129,7 @@
        
            // Check the username and redirect the user accordingly
            if (username === 'client') {
-             window.location.href = 'bank.html';
+             window.location.href = 'client.html';
            } else if (username === 'banker') {
              window.location.href = 'banker.html';
            } else if (username === 'admin') {
