Added Credit Card Services
Created a page with credit card services which has inside credit card points where you can redeem credit card points for cash back with working java script that removes amount redeemed and has proper if else conditions. =)

--- a/Bank Site/html/client.html
+++ b/Bank Site/html/client.html
@@ -182,7 +182,7 @@
                                  </div>
                                  <h3 class="corporate_text">Credit Card</h3>
                                  <p class="chunks_text">chunks as necessary, making this the first true generator on the Internet. It uses a dictionary </p>
-                                 <div class="readmore_button active"><a href="#">Read More</a></div>
+                                 <div class="readmore_button active"><a href="CreditCardHome.html">Read More</a></div>
                               </div>
                            </div>
                            <div class="col-md-4">
