--- a/Bank Site/html/client.html
+++ b/Bank Site/html/client.html
@@ -19,6 +19,8 @@
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
+      <!-- notification-->
+      <link rel="stylesheet" href="css/notification.css">   
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- font css -->
@@ -49,6 +51,9 @@
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="blog.html">News</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="notification.html">Notifications</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -209,6 +214,7 @@
             </div>
          </div>
       </div>
+      
       <!-- services section end -->
       <!-- studies section start -->
       <div class="studies_section layout_padding">
@@ -289,10 +295,7 @@
                      </ul>
                   </div>
                </div>
-               <div class="footer_logo">
-                  <a href="indexz.html">
-                     <img src="images/logo.png">
-               </div>
+
                <div class="social_icon">
                <ul>
                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -313,6 +316,7 @@
       <!-- copyright section end -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
+      <script src="js/notification.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
