--- a/Bank Site/html/client.html
+++ b/Bank Site/html/client.html
@@ -68,7 +68,6 @@
             </div>
          </nav>
       </div>
-
    </div>
    <!-- header section end -->
 
@@ -252,6 +251,7 @@
       </div>
    </div>
    <!-- about section end -->
+    <!-- about section end -->
 
 
      
