Had to fix his work because he has zero work ethic

--- a/Bank Site/html/client.html
+++ b/Bank Site/html/client.html
@@ -188,7 +188,7 @@
                               <p class="chunks_text">Never forget a payment or a duedate again with our helpful
                                  reminders feature. Set up automatic reminders for your bills and payments and stay on
                                  top of your finances effortlessly.</p>
-                              <div class="readmore_button"><a href="#">Select</a></div>
+                              <div class="readmore_button"><a href="reminder.html">Select</a></div>
                            </div>
                         </div>
                         <div class="col-md-4">
