--- a/html/client.html
+++ b/html/client.html
@@ -68,10 +68,10 @@
             </div>
          </nav>
       </div>
+          
    </div>
    <!-- header section end -->
-
-
+   
    <!-- services section start -->
    <div class="services_section">
       <div class="container">
@@ -124,7 +124,7 @@
                               <p class="chunks_text">Need to finance a major purchase or cover unexpected expenses?
                                  Apply for a loan with us and get the funds you need quickly and easily. We offer
                                  competitive rates and flexible repayment options.</p>
-                              <div class="readmore_button"><a href="#">Select</a></div>
+                              <div class="readmore_button"><a href="Loanapp.html">Apply</a></div>
                            </div>
                         </div>
                      </div>
@@ -143,7 +143,7 @@
                               <p class="chunks_text">Keep track of your finances and stay on top of your spending with
                                  our easy-to-use transaction view feature. Access your transaction history anytime,
                                  anywhere, and stay in control of your budget.</p>
-                              <div class="readmore_button"><a href="#">Select</a></div>
+                              <div class="readmore_button"><a href="transactionhistory.html">View</a></div>
                            </div>
                         </div>
                         <div class="col-md-4">
@@ -156,7 +156,7 @@
                               <p class="chunks_text">Pay easily all your bills, payments, and invoices online with our
                                  secure and convenient payment platform. Say goodbye to paper bills and never miss a
                                  payment again.</p>
-                              <div class="readmore_button active"><a href="#">Select</a></div>
+                              <div class="readmore_button active"><a href="payment.html">Select</a></div>
                            </div>
                         </div>
                         <div class="col-md-4">
@@ -243,7 +243,9 @@
             <div class="col-md-6">
                <div class="about_text_main">
                   <h1 class="about_taital">Notfications Center</h1>
-                  <p class="about_text">Stay informed about the latest updates and news from our website. In this section, you will find alerts related to your account, important announcements, and other messages that may require your attention.</p>
+                  <p class="about_text">Stay informed about the latest updates and news from our website. In this
+                     section, you will find alerts related to your account, important announcements, and other messages
+                     that may require your attention.</p>
                   <div class="readmore_bt"><a href="notfications.html">View More</a></div>
                </div>
             </div>
@@ -251,10 +253,10 @@
       </div>
    </div>
    <!-- about section end -->
-    <!-- about section end -->
+   <!-- about section end -->
 
 
-     
+
    <!-- footer section start -->
    <div class="footer_section layout_padding">
       <div class="container">
