Finalized Project and fixed Hajar's and Fares's work
non-functioning headers even though the code for functioning headers already exists, missing footers and bad layout. Reminders tab had to be fully redone.

--- a/Bank Site/html/blog.html
+++ b/Bank Site/html/blog.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="what-we.html">What we do</a>
                      </li>
                      <li class="nav-item active">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">News</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -57,8 +57,8 @@
                   <form class="form-inline my-2 my-lg-0">
                      <div class="login_bt">
                         <ul>
-                           <li><a href="#"><span class="user_icon"><i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
-                           <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                           <li><a href="login2.html"><span class="user_icon">
+                              <i class="fa fa-user" aria-hidden="true"></i></span>Login</a></li>
                         </ul>
                      </div>
                   </form>
@@ -67,48 +67,41 @@
          </div>
       </div>
       <!-- header section end -->
-      <!-- studies section start -->
-      <div class="studies_section layout_padding">
-         <div class="container">
-            <div class="row">
-               <div class="col-sm-12">
-                  <h1 class="studies_taital">Recent Case Studies</h1>
+      <!-- news section start -->
+   <div class="news_section layout_padding">
+      <div class="container">
+         <h1 class="news_taital">Recent News</h1>
+         <div class="news_section_2">
+            <div class="news_box">
+               <div id="custom_slider" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                     <div class="carousel-item active">
+                        <div class="news_img"><img src="images/news-img.png"></div>
+                     </div>
+                     <div class="carousel-item">
+                        <div class="news_img"><img src="images/news-img2.png"></div>
+                     </div>
+                     <div class="carousel-item">
+                        <div class="news_img"><img src="images/news-img.png"></div>
+                     </div>
+                  </div>
+                  <a class="carousel-control-next" href="#custom_slider" role="button" data-slide="next">
+                     <i class="fa fa-arrow-right"></i>
+                  </a>
                </div>
-            </div>
-            <div class="studies_section_2">
-               <div class="row">
-                  <div class="col-md-4">
-                     <div class="hover01 column">
-                        <figure><img src="images/service-img1.png"></figure>
-                     </div>
-                     <div class="studies_box">
-                        <h3 class="introduction_text">Master of Law, 2010</h3>
-                     </div>
-                     <div class="read_bt"><a href="#">Read More</a></div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="hover01 column">
-                        <figure><img src="images/service-img2.png"></figure>
-                     </div>
-                     <div class="studies_box">
-                        <h3 class="introduction_text">Master of Law, 2012</h3>
-                     </div>
-                     <div class="read_bt active"><a href="#">Read More</a></div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="hover01 column">
-                        <figure><img src="images/service-img3.png"></figure>
-                     </div>
-                     <div class="studies_box">
-                        <h3 class="introduction_text">Master of Law, 2014</h3>
-                     </div>
-                     <div class="read_bt"><a href="#">Read More</a></div>
-                  </div>
-               </div>
+               <h2 class="does_taital">Tech stocks surge as earnings beat expectations</h2>
+               <p class="dummy_text">Several technology companies reported better-than-expected earnings in their most
+                  recent quarterly reports, leading to a surge in the stock market. Major players such as Apple, Amazon,
+                  and Microsoft all exceeded analysts' estimates, and investors responded by buying up shares in these
+                  companies. This resulted in a boost to the overall tech sector, with the Nasdaq index reaching a new
+                  all-time high. Experts attribute the strong performance to increased demand for technology products
+                  and services due to the ongoing shift towards remote work and online shopping during the pandemic.
+               </p>
             </div>
          </div>
       </div>
-      <!-- studies section end -->
+   </div>
+   <!-- news section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
